--- a/html/details.html
+++ b/html/details.html
@@ -18,12 +18,18 @@
     <!-- 这里引入外部文件的字体图标样式 -->
     <link rel="stylesheet" href="../css/iconfont.css" />
     <style type="text/css">
+        #app .main {
+            margin-bottom: 3.4rem;
+        }
+
         .goodsAction {
             width: 100%;
-            height: 3rem;
+            height: 3.2rem;
             position: fixed;
             bottom: 0;
             display: flex;
+            z-index: 200;
+            background-color: #fff;
         }
 
         .goodsIcon {
@@ -38,15 +44,144 @@
         }
 
         .van-button {
-            margin-right: 1.5rem;
+            position: absolute;
+            right: 1rem;
+            top: 0.3rem;
         }
 
         .chat,
         .cart,
         .thumb-circle {
             display: inline-block;
-            margin-left: 0.8rem;
+            margin-left: 1rem;
             text-align: center;
+        }
+
+        .publisherInfo img {
+            margin-left: 1rem;
+            margin-right: 0.2rem;
+            width: 3rem;
+            height: 3rem;
+            vertical-align: bottom;
+        }
+
+        .publisherInfo .infoRight {
+            display: inline-block;
+        }
+
+        .publisherInfo h4 {
+            margin: 0.1rem 0;
+            display: inline-block;
+        }
+
+        .publisherInfo .credit {
+            display: inline-block;
+        }
+
+        .publisherInfo .publisherCredit {
+            font-size: 0.6rem;
+        }
+
+        .infoRight p {
+            margin: 0.5rem 0.5rem 0.1rem 0rem;
+            font-size: 0.8rem;
+            color: #736B6B;
+        }
+
+        .goodInfo {
+            width: 90%;
+            margin: 0 auto;
+        }
+
+        .goodInfo :first-child {
+            font-size: 0.7rem;
+            color: red;
+            font-weight: 500;
+        }
+
+        .goodInfo :nth-child(2) {
+            font-size: 1rem;
+            color: red;
+            font-weight: 700;
+        }
+
+        .goodInfo span:nth-child(3) {
+            font-size: 0.6rem;
+            color: red;
+            background-color: #E5BBBB;
+            padding: 0.2rem;
+        }
+
+        .goodInfo .infoContent p {
+            font-size: 1rem;
+            color: black;
+        }
+
+        .goodInfo .imgs img {
+            width: 100%;
+            height: 15rem;
+        }
+
+        .goodInfo .pay {
+            display: inline-block;
+        }
+
+        .goodInfo .pay span {
+            color: #1D82FE;
+        }
+
+        .goodInfo .wantBrowse {
+            float: right;
+        }
+
+        .goodInfo .wantBrowse span {
+            font-size: 0.8rem;
+            color: #736B6B;
+        }
+
+        .goodInfo .wantBrowse span:last-child {
+            background-color: #fff;
+        }
+
+        .comment h4 {
+            margin-left: 1rem;
+            display: inline-block;
+        }
+
+        .comment img {
+            width: 3rem;
+            height: 3rem;
+            border-radius: 3rem;
+            margin: 0 0.8rem;
+            position: absolute;
+            top: 1rem;
+        }
+
+        .comment .van-panel {
+            display: inline-block;
+            margin-left: 5rem;
+            width: 80%;
+        }
+
+        .comment .content {
+            color: #736B6B;
+            font-size: 0.8rem;
+        }
+
+        .comment li {
+            margin-bottom: 0.5rem;
+            position: relative;
+        }
+
+        .comment {
+            margin-bottom: 4rem;
+        }
+
+        .noComment {
+            text-align: center;
+            font-size: 1rem;
+            color: gray;
+            margin-bottom: 4rem;
         }
     </style>
 </head>
@@ -56,26 +191,84 @@
         <div class="navbar">
             <van-nav-bar title="详情" left-text="返回" left-arrow @click-left="goToGroud" />
         </div>
+        <div class="main">
+            <div class="publisherInfo">
+                <img :src="goodInfo.publisher.headurl" alt="发布者">
+                <div class="infoRight">
+                    <h4>{{goodInfo.publisher.name}}</h4>
+                    <div class="credit">
+                        <van-icon name="fire" color="#1D82FE" size="10px" />
+                        <span class="publisherCredit">信用{{goodInfo.publisher.credit}}</span>
+                    </div>
+                    <p>
+                        <span>{{goodInfo.time}}</span>
+                        <span>发布于{{goodInfo.city}}</span>
+                    </p>
+                </div>
+            </div>
+            <div>
+                <!-- 分割线 -->
+                <van-divider />
+            </div>
+            <div class="goodInfo">
+                <span>￥</span>
+                <span>{{goodInfo.prize}}</span>
+                <span>{{goodInfo.logistics}}</span>
+                <div class="infoContent">
+                    <p>{{goodInfo.info}}</p>
+                </div>
+                <div class="imgs">
+                    <ul>
+                        <li v-for="item in goodInfo.imgurl" :key="item">
+                            <img :src="item" alt="详情图片">
+                        </li>
+                    </ul>
+                </div>
+                <div class="pay">
+                    <van-icon name="alipay" color="#1D82FE" />
+                    <span>担保交易</span>
+                </div>
+                <div class="wantBrowse">
+                    <span>{{goodInfo.want}}人想要</span>
+                    <span>·</span>
+                    <span>浏览{{goodInfo.browse}}</span>
+                </div>
+            </div>
+            <div class="comment" v-if="goodInfo.comment[0].name != ''">
+                <h4>全部留言</h4>
+                <span>·</span>
+                <span>{{goodInfo.comment.length}}</span>
+                <ul>
+                    <li v-for="item in goodInfo.comment" :key="item">
+                        <img :src="item.headurl" alt="用户头像">
+                        <van-panel :title="item.name" :status="item.rate + '分'">
+                            <div class="content">{{item.content}}</div>
+                        </van-panel>
+                    </li>
+                </ul>
+            </div>
+            <div class="noComment" v-else>
+                <p>还没有任何人来留过言，看对眼就赶紧留言~</p>
+            </div>
+        </div>
+
         <div class="goodsAction">
             <div class="goodsIcon">
-                <div class="thumb-circle">
-                    <van-icon name="thumb-circle-o" size="22px" />
+                <div class="thumb-circle" @click="thumbCircleResponse">
+                    <van-icon :name="thumbName" size="22px" :color="thumbIconColor" />
                     <span>点赞</span>
                 </div>
                 <div class="chat">
-                    <van-icon name="chat-o" size="22px" />
+                    <van-icon name="chat-o" size="22px" color="#000" />
                     <span>留言</span>
                 </div>
-                <div class="cart">
-                    <van-icon name="cart-o" size="22px" />
+                <div class="cart" @click="cartResponse">
+                    <van-icon :name="cartName" size="22px" :color="cartIconColor" />
                     <span>购物车</span>
                 </div>
             </div>
             <van-button color="linear-gradient(to right, #ff6034, #ee0a24)" round>
-                加入购物车
-            </van-button>
-            <van-button color="linear-gradient(to right, #ff6034, #ee0a24)" round>
-                立即购买
+                我想要
             </van-button>
         </div>
 
@@ -86,30 +279,55 @@
     let vm = new Vue({
         el: "#app",
         data: {
+            thumbName: "thumb-circle-o",
+            thumbIconColor: "#000",
+            cartName: "cart-o",
+            cartIconColor: "#000",
             goodInfo: {}
         },
         methods: {
             goToGroud: function () {
                 sessionStorage.clear();
                 window.location.href = "./groud.html";
+            },
+            thumbCircleResponse: function () {
+                if (this.thumbName === "thumb-circle-o") {
+                    this.thumbName = "thumb-circle";
+                    this.thumbIconColor = "#DD5044";
+                }
+                else {
+                    this.thumbName = "thumb-circle-o";
+                    this.thumbIconColor = "#000";
+                }
+            },
+            cartResponse: function () {
+                if (this.cartName === "cart-o") {
+                    this.cartName = "cart";
+                    this.cartIconColor = "#F21F28";
+                }
+                else {
+                    this.cartName = "cart-o";
+                    this.cartIconColor = "#000";
+                }
             }
         },
-        // beforeMount: function () {
-        //     Toast.loading({
-        //         message: '加载中...',
-        //         forbidClick: true,
-        //     });
-        // },
+        beforeMount: function () {
+            vant.Toast.loading({
+                message: '加载中...',
+                forbidClick: true,
+            });
+        },
         mounted: function () {
             axios.get("http://localhost:5502/getGroundInfo").then(res => {
                 let index = sessionStorage.getItem("index");
                 for (let i = res.data.length - 1; i >= 0; i--) {
                     if (i === 10 - index) {
                         this.goodInfo = res.data[i];
+                        console.log(this.goodInfo);
                         break;
                     }
                 }
-                // Toast.clear;
+                vant.Toast.clear;
             })
         }
     })
