--- a/html/shopcar.html
+++ b/html/shopcar.html
@@ -60,7 +60,7 @@
 <body>
     <div id="app">
         <div class="navbar">
-            <van-nav-bar left-text="购物车" :right-text="navbarRightText" @click-right="manageShops" />
+            <van-nav-bar left-text="购物车" :right-text="navbarRightText" @click-right="manageShops" fixed placeholder />
         </div>
         <div class="goodInfo" v-if="shopcar[0].good != ''">
             <h2>全部商品</h2>
