--- a/html/details.html
+++ b/html/details.html
@@ -249,12 +249,12 @@
                 </div>
             </div>
             <!-- 评论留言 -->
-            <div class="comment" v-if="goodInfo.comment[0].name != ''">
+            <div class="comment" v-if="comment != undefined">
                 <h4>全部留言</h4>
                 <span>·</span>
-                <span>{{goodInfo.comment.length}}</span>
+                <span>{{comment.length}}</span>
                 <ul>
-                    <li v-for="item in goodInfo.comment" :key="item">
+                    <li v-for="item in reverseComment" :key="item">
                         <img :src="item.headurl" alt="用户头像">
                         <van-panel :title="item.name" :status="item.rate + '分'">
                             <div class="content">{{item.content}}</div>
@@ -319,8 +319,14 @@
             cartName: "cart-o",
             cartIconColor: "#000",
             goodInfo: {},
+            comment: [],
             message: "",
             rate: "0"
+        },
+        computed: {
+            reverseComment: function () {
+                return this.comment.reverse();
+            }
         },
         methods: {
             goToGroud: function () {
@@ -371,8 +377,6 @@
                     for (let i = res.data.length - 1; i >= 0; i--) {
                         let id = userInfo[i].user.id;
                         if (logonUserId === id) {
-                            console.log(userInfo[i].user.headurl);
-                            console.log(userInfo[i].user.name);
                             headurl = userInfo[i].user.headurl;
                             name = userInfo[i].user.name;
                             break;
@@ -384,21 +388,31 @@
                         content,
                         rate
                     };
-                    if (this.goodInfo.comment[0].name != "") {
-                        // 这里还应该同步到数据库
-                        this.goodInfo.comment.push(newComment);
-                        this.rate = "0";
-                        this.message = "";
-                        vant.Toast.success('发布成功！');
-                    }
-                    else {
-                        // 这里还应该同步到数据库
-                        this.goodInfo.comment.pop();
-                        this.goodInfo.comment.push(newComment);
-                        this.rate = "0";
-                        this.message = "";
-                        vant.Toast.success('发布成功！');
-                    }
+                    // 这里的this指向出现了变化，需要调整
+                    let that = this;
+                    axios.post("http://localhost:5502/commentUpdate", Qs.stringify({
+                        id: this.goodInfo._id,
+                        comment: newComment
+                    }))
+                        .then(function (response) {
+                            if (that.comment != undefined) {
+                                // 这里还应该同步到数据库
+                                that.comment.unshift(newComment);
+                                that.rate = "0";
+                                that.message = "";
+                                vant.Toast.success('发布成功！');
+                            }
+                            else {
+                                // 这里还应该同步到数据库
+                                that.comment = [newComment]
+                                that.rate = "0";
+                                that.message = "";
+                                vant.Toast.success('发布成功！');
+                            }
+                        })
+                        .catch(function (error) {
+                            console.log(error);
+                        });
                 });
             }
         },
@@ -414,6 +428,7 @@
                 for (let i = res.data.length - 1; i >= 0; i--) {
                     if (i === 10 - index) {
                         this.goodInfo = res.data[i];
+                        this.comment = res.data[i].comment;
                         console.log(this.goodInfo);
                         break;
                     }
